[gd_scene load_steps=10 format=2]

[ext_resource path="res://ASSETS/enemies/slimeBlue.png" type="Texture" id=1]
[ext_resource path="res://ASSETS/enemies/slimeBlue_blue.png" type="Texture" id=2]
[ext_resource path="res://ASSETS/enemies/slimeBlue_squashed.png" type="Texture" id=3]
[ext_resource path="res://Enemy.gd" type="Script" id=4]
[ext_resource path="res://ASSETS/sounds/pepSound2.ogg" type="AudioStream" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "squashed",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "crawl",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20, 14 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 3 )

[sub_resource type="CapsuleShape2D" id=4]
height = 33.9967

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 35
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "crawl"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.5, 3 )
shape = SubResource( 2 )

[node name="FloorChecker" type="RayCast2D" parent="."]
position = Vector2( 0, 9 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 2

[node name="TopChecker" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopChecker"]
position = Vector2( 0, -9 )
shape = SubResource( 3 )

[node name="sides_checker" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="sides_checker"]
position = Vector2( 0, 3 )
rotation = -1.58194
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="SoundSquash" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
pitch_scale = 3.92

[connection signal="body_entered" from="TopChecker" to="." method="_on_TopChecker_body_entered"]
[connection signal="body_entered" from="sides_checker" to="." method="_on_sides_checker_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
